--- a/styles/austyle.css
+++ b/styles/austyle.css
@@ -1,25 +1,18 @@
 html {
 font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high */
 font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
-color:white;
-background-color: blueviolet;
+background-color:#1B2936;
 }
 
 body {
-border: 1px solid black;/*may need to remove, makes noticeable space near dropdown icon if there's no header border colour*/
 margin: auto;
 max-width: 85%;
 min-height: 100vh;
 display: flex;
 flex-direction: column;
-background-color:aqua;
-background-image: url("../images/bg2.jpg");
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-background-attachment: fixed;
-border-radius: 12px;
-
+background-color: #223344;
+color: #92ADC9;
+border-radius: 8px; /*rounds edges*/
 }
 
 main{
@@ -27,7 +20,18 @@ padding: 9rem; /*keeps elements from going under heading*/
 text-align: justify;
 }
 
-h1.pageheading{
+img.slogo{
+width:100px;
+height: auto;
+border-radius: 8px;
+display: inline;
+float: left;
+margin-top: 0.5rem;
+margin-left: 0.5rem;
+padding: 0;
+}
+
+h2.pageheading{
 text-align: center;
 }
 
@@ -43,8 +47,11 @@ float: right;
 border: none;
 cursor: pointer;
 padding: 12px;
-background: gray;
+background-color: #1B2936;
 color: white;
+text-shadow: 2px 2px 2px #000000;
+font-weight: bold;/*makes text stand out more*/
+border-radius: 8px;
 }
 
 #BTTBtn:hover{
@@ -72,6 +79,15 @@ text-align: center;
 flex: 1;
 }
 
+nav.intPLinks li a {
+text-decoration: none;
+}
+
+a{
+text-decoration: underline;
+color: inherit;/*takes the colour which the page is using*/
+}
+
 nav.extPLinks ul {
 padding: 0;
 list-style-type: none;
@@ -81,20 +97,11 @@ flex: 2;
 img.fbLogo, img.igLogo, img.xLogo, img.tiktokLogo{
 height: 30px;
 width:30px;
-}
-
-nav.intPLinks li a {
-text-decoration: none;
-color: white;
-}
-
-a{
-text-decoration: underline;
-color: inherit;/*takes the colour which the page is using*/
+border-radius: 8px;
 }
 
 a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
-background-color: #74837c;
+background-color: #1B2936;
 color: white;
 padding: 10px;
 font-size: 16px;
@@ -109,28 +116,26 @@ margin-right: 1.5em;
 div.dropdown-links{
 display:none;
 position: absolute;
-background-color: #1822a5;
+background-color: #92ADC9;
 min-width: 160px;
 }
 
 div.dropdown-links a{
-color: rgb(150, 19, 19);
 padding: 12px 16px;
 text-decoration: none;
 display:block;
+font-weight: bold;
+color:#223344;
 }
 
 div.dropdown-links a:hover {
-background-color: #22e182;
+background-color: #223344;
+color:#92ADC9;
 }
 
 div.dropdown:hover div.dropdown-links{
 display: block;
 border-radius: 8px;
-}
-
-div.dropdown:hover a.dropdbtn{
-background-color: rgb(150, 52, 52);
 }
 
 header{
@@ -145,11 +150,10 @@ footer{
 bottom: 0;
 text-align: center;
 width: 100%; /*will need to change to 100% if position is removed*/
-background-color: red;
-color: black;
 margin-top: -6rem;/*used to bring footer up to save scroll space*/
 }
 
 header, footer{
 border-radius: 8px;
+background-color: #1B2936;
 }
