--- a/styles/custyle.css
+++ b/styles/custyle.css
@@ -1,24 +1,28 @@
 html {
 font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high */
 font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
-color:white;
-background-color: blueviolet;
-background-color:rgb(0, 0, 0);
-background-image: url("../images/bg1.jpg");
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-background-attachment: fixed;
+background-color:#1B2936;
 }
 
 body {
-border: 1px solid black;/*may need to remove, makes noticeable space near dropdown icon if there's no header border colour*/
 margin: auto;
 max-width: 85%;
 min-height: 100vh;
 display: flex;
 flex-direction: column;
-background-color: black;
+background-color: #223344;
+color: #92ADC9;
+border-radius: 8px; /*rounds edges*/
+}
+
+body {
+margin: auto;
+max-width: 85%;
+min-height: 100vh;
+display: flex;
+flex-direction: column;
+background-color: #223344;
+color: #92ADC9;
 border-radius: 8px;
 }
 
@@ -28,8 +32,23 @@ text-align: center;
 display:inline-block;
 }
 
+img.slogo{
+width:100px;
+height: auto;
+border-radius: 8px;
+display: inline;
+float: left;
+margin-top: 0.5rem;
+margin-left: 0.5rem;
+padding: 0;
+}
+
 div.secbr{
 margin-right: 0.5em;
+}
+
+h2.enq{
+display: inline-block;
 }
 
 section{
@@ -58,7 +77,6 @@ height: 180px;
 
 div.faqbx{
 margin-top: 1em;
-color: white;
 }
 
 div.faq p{
@@ -102,15 +120,15 @@ flex: 2;
 img.fbLogo, img.igLogo, img.xLogo, img.tiktokLogo{
 height: 30px;
 width:30px;
+border-radius: 8px;
 }
 
 nav.intPLinks li a {
 text-decoration: none;
-color: white;
 }
 
 a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
-background-color: #74837c;
+background-color: #1B2936;
 color: white;
 padding: 10px;
 font-size: 16px;
@@ -125,28 +143,26 @@ margin-right: 1.5em;
 div.dropdown-links{
 display:none;
 position: absolute;
-background-color: #1822a5;
- min-width: 160px;
+background-color: #92ADC9;
+min-width: 160px;
 }
 
 div.dropdown-links a{
-color: rgb(150, 19, 19);
 padding: 12px 16px;
 text-decoration: none;
 display:block;
+font-weight: bold;
+color:#223344;
 }
 
 div.dropdown-links a:hover {
-background-color: #22e182;
+background-color: #223344;
+color:#92ADC9;
 }
 
-div.dropdown:hover div.dropdown-links{/*allows the dropdown function to work*/
+div.dropdown:hover div.dropdown-links{
 display: block;
 border-radius: 8px;
-}
-
-div.dropdown:hover a.dropdbtn{
-background-color: rgb(150, 52, 52);
 }
 
 header{
@@ -158,7 +174,7 @@ background-color: black;
 
 
 article.wrapper{
-background-color: #74837c;
+background-color: #92ADC9;
 color: white;
 padding: 14px;
 font-size: 12px;
@@ -187,9 +203,9 @@ article.wrapper
     .input_field 
     input[type="text"], 
 article.wrapper textarea { 
-border: 1px solid #c66666; 
+border: 1px solid gray; 
 width: 80%; 
-padding: 4px; /*perfect size, if I go up a few pixels, it overflows and ruins the aesthetic of the fixed footer*/
+padding: 4px; /*perfect size. If I go up a few pixels, it overflows and ruins the aesthetic of the fixed footer*/
 }
 
 article.wrapper textarea{
@@ -203,7 +219,7 @@ margin-top: 1px; /*submit buttun distance from elements above*/
 padding: 10px; 
 text-align: center; 
 width: 100%; 
-background: #569a4d; 
+background: #1B2936;; 
 color: #fcfbf7; 
 text-transform: uppercase; 
 letter-spacing: 4px;/*space between letters in specified element text*/ 
@@ -225,10 +241,10 @@ footer{
 bottom: 0;
 text-align: center;
 width: 100%; /*will need to change to 100% if position is removed*/
-background-color: red;
 margin-top: -6rem;/*used to bring footer up to save scroll space*/
 }
 
 header, footer{
 border-radius: 8px;
+background-color: #1B2936;
 }
