--- a/styles/oreckz.css
+++ b/styles/oreckz.css
@@ -1,34 +1,38 @@
 html {
 font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high */
 font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
-background-color: blueviolet;
-background-color:rgb(0, 0, 0);
-background-image: url("../images/bg1.jpg");
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-background-attachment: fixed;
+background-color:#1B2936;
 }
 
 body {
-border: 1px solid black;/*may need to remove, makes noticeable space near dropdown icon if there's no header border colour*/
 margin: auto;
 max-width: 85%;
 min-height: 100vh;
 display: flex;
 flex-direction: column;
-background-color: black;
+background-color: #223344;
+color: #92ADC9;
 border-radius: 8px; /*rounds edges*/
-color: white;
 }
 
 main{
 padding: 9rem; /*keeps elements from going under heading*/
-text-align: center;
+text-align: justify;
 display: inline-block;
 }
 
-h1.pageheading{
+img.slogo{
+width:100px;
+height: auto;
+border-radius: 8px;
+display: inline;
+float: left;
+margin-top: 0.5rem;
+margin-left: 0.5rem;
+padding: 0;
+}
+
+h2.pageheading{
 text-align: center;
 padding-bottom: 20px;
 }
@@ -45,8 +49,11 @@ float: right;
 border: none;
 cursor: pointer;
 padding: 12px;
-background: gray;
+background-color: #1B2936;
 color: white;
+text-shadow: 2px 2px 2px #000000;
+font-weight: bold;
+border-radius: 8px;
 }
 
 #BTTBtn:hover{
@@ -89,13 +96,11 @@ text-align: center;
 flex: 1;
 }
 
-nav.intPLinks li a {
-text-decoration: none;
-color: white;
-}
-
 a{
 text-decoration: none;
+}
+
+nav.intplinks a{
 color: white;
 }
 
@@ -112,7 +117,7 @@ border-radius: 8px;
 }
 
 a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
-background-color: #74837c;
+background-color: #1B2936;
 color: white;
 padding: 10px;
 font-size: 16px;
@@ -127,28 +132,26 @@ margin-right: 1.5em;
 div.dropdown-links{
 display:none;
 position: absolute;
-background-color: #1822a5;
- min-width: 160px;
+background-color: #92ADC9;
+min-width: 160px;
 }
 
 div.dropdown-links a{
-color: rgb(150, 19, 19);
 padding: 12px 16px;
 text-decoration: none;
 display:block;
+font-weight: bold;
+color:#223344;
 }
 
 div.dropdown-links a:hover {
-background-color: #22e182;
+background-color: #223344;
+color:#92ADC9;
 }
 
 div.dropdown:hover div.dropdown-links{
 display: block;
 border-radius: 8px;
-}
-
-div.dropdown:hover a.dropdbtn{
-background-color: rgb(150, 52, 52);
 }
 
 section a{
@@ -157,7 +160,8 @@ flex: 200px; /*this is its default size, will shrink along with window to fit sp
 text-shadow: 2px 2px 2px #000000;   
 background-color: rgb(121, 119, 116);
 padding: 40px 10px;/*used to resize background image allowing enough content to be shown.*/
-box-shadow: 2px 4px gray;
+box-shadow: 2px 4px #92ADC9;;
+color: white;
 }
 
 section a:active{
@@ -185,8 +189,7 @@ animation: shake 0.4s ease-out; /*animation to trigger upon click*/
 }
 
 section a:hover{/*calls the <a> links in section*/
-color: yellow;
-box-shadow: 2px 4px yellow;
+box-shadow: 2px 4px white;
 text-shadow: 2px 2px 2px #000000;   
 }
 
@@ -259,7 +262,6 @@ header{
 top: 0;
 position: absolute; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
-background-color: rgb(65, 61, 61);
 padding-bottom: 14px;
 /*border: /*solid 1px white; in case I want to add a border colour around the header*/ 
 text-align: right;
@@ -268,12 +270,11 @@ text-align: right;
 footer{
 bottom: 0;
 text-align: center;
-position: relative; /*can remove this or change to static if I want footer to remain at bottom and unseen unless I scroll, will need to adjust width to 100% if so*/
-width: 100%; /*will need to change to 100% if position is removed or changed to static*/
-background-color: red;
-color: black;
+width: 100%; /*will need to change to 100% if position is removed*/
+margin-top: -6rem;/*used to bring footer up to save scroll space*/
 }
 
 header, footer{
 border-radius: 8px;
+background-color: #1B2936;
 }
