--- a/styles/sports.css
+++ b/styles/sports.css
@@ -1,25 +1,18 @@
 html {
 font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high */
 font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
-background-color: blueviolet;
-background-color:rgb(0, 0, 0);
-background-image: url("../images/bg1.jpg");
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-background-attachment: fixed;
+background-color:#1B2936;
 }
 
 body {
-border: 1px solid black;/*may need to remove, makes noticeable space near dropdown icon if there's no header border colour*/
 margin: auto;
 max-width: 85%;
 min-height: 100vh;
 display: flex;
 flex-direction: column;
-background-color: black;
+background-color: #223344;
+color: #92ADC9;
 border-radius: 8px; /*rounds edges*/
-color: white;
 }
 
 main{
@@ -29,9 +22,19 @@ display: inline-block;
 flex: auto;/*if there's a need for resizability on elements*/
 }
 
-h1.pageheading{
+img.slogo{
+width:100px;
+height: auto;
+border-radius: 8px;
+display: inline;
+float: left;
+margin-top: 0.5rem;
+margin-left: 0.5rem;
+padding: 0;
+}
+
+h2.pageheading{
 text-align: center;
-padding-bottom: 20px;
 }
 
 div.dropdown{
@@ -56,7 +59,6 @@ flex: 1;
 
 nav.intPLinks li a {
 text-decoration: none;
-color: white;
 }
 
 nav.extPLinks ul {
@@ -68,10 +70,11 @@ flex: 2;
 img.fbLogo, img.igLogo, img.xLogo, img.tiktokLogo{
 height: 30px;
 width:30px;
+border-radius: 8px;
 }
 
 a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
-background-color: #74837c;
+background-color: #1B2936;
 color: white;
 padding: 10px;
 font-size: 16px;
@@ -86,19 +89,21 @@ margin-right: 1.5em;
 div.dropdown-links{
 display:none;
 position: absolute;
-background-color: #1822a5;
- min-width: 160px;
+background-color: #92ADC9;
+min-width: 160px;
 }
 
 div.dropdown-links a{
-color: rgb(150, 19, 19);
 padding: 12px 16px;
 text-decoration: none;
 display:block;
+font-weight: bold;
+color:#223344;
 }
 
 div.dropdown-links a:hover {
-background-color: #22e182;
+background-color: #223344;
+color:#92ADC9;
 }
 
 div.dropdown:hover div.dropdown-links{
@@ -106,16 +111,12 @@ display: block;
 border-radius: 8px;
 }
 
-div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
-background-color: rgb(150, 52, 52);
-}
-
 img.hni, img.bluelck{
 width: 100%;/*images will go as big as possible and stay capped at the max width next line regardless of fullscreen/halfscreen*/
 max-width: 200px;
 height: auto;
 border-radius: 8px;
-box-shadow: 2px 4px rgb(141, 27, 27);
+box-shadow: 2px 4px #92ADC9;
 float: left;
 cursor: pointer;
 margin-right: 1rem;
@@ -126,10 +127,14 @@ width: 100%;/*images will go as big as possible and stay capped at the max width
 max-width: 200px;
 height: auto;
 border-radius: 8px;
-box-shadow: 2px 4px rgb(141, 27, 27);
+box-shadow: 2px 4px #92ADC9;
 float: right;
 cursor: pointer;
 margin-left: 1rem;
+}
+
+section article img:hover{
+box-shadow: 2px 4px white;
 }
 
 article{
@@ -142,6 +147,7 @@ flex:400px;/*was necessary so that I can display the information about the shows
 h1.sr{
 max-width: 500px;
 width:100%;
+background-color: #1B2936;
 }
 
 section article h4{/*refers to heading in relevant path*/
@@ -149,7 +155,14 @@ text-align:center;
 max-width: 500px;
 width:100%;
 height: auto;
-background-color: #1822a5;
+background-color: #1B2936;
+}
+
+section article button{
+background-color: #1B2936;
+color: white;
+cursor: pointer;
+border-radius: 10px;
 }
 
 section article p.infol{
@@ -194,7 +207,6 @@ header{
 top: 0;
 position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
-background-color: black;
 padding-bottom: 14px;
 /*border: /*solid 1px white; in case I want to add a border colour around the header*/ 
 }
@@ -203,11 +215,10 @@ footer{
 bottom: 0;
 text-align: center;
 width: 100%; /*will need to change to 100% if position is removed*/
-background-color: red;
-color: black;
 margin-top: -6rem;/*used to bring footer up to save scroll space*/
 }
 
 header, footer{
 border-radius: 8px;
+background-color: #1B2936;
 }
