--- a/styles/f-ma.css
+++ b/styles/f-ma.css
@@ -119,7 +119,11 @@ border-radius: 8px;
 box-shadow: 2px 4px #92ADC9;
 float: left;
 cursor: pointer;
-margin-right: 1rem;/*for space between picture and text(s)*/
+margin-left: 1rem;
+margin-right: 1rem;
+margin-top: 1rem;
+margin-bottom: 1rem;
+/*margin-[direction] helps space between images and text*/
 }
 
 img.ktmd, img.bakitg{
@@ -130,7 +134,10 @@ border-radius: 8px;
 box-shadow: 2px 4px #92ADC9;
 float: right;
 cursor: pointer;
-margin-left: 1rem;/*for space between picture and text(s)*/
+margin-left: 1rem;
+margin-right: 1rem;
+margin-top: 1rem;
+margin-bottom: 1rem;
 }
 
 section article img:hover{
@@ -138,10 +145,11 @@ box-shadow: 2px 4px white;
 }
 
 article{
-margin-bottom: 1em;
-margin-right: 1em;
+/*margin-bottom: 1em;
+margin-right: 1em; This is obsolete as images themselves have directional margins*/
 border-radius: 8px;
-flex:400px;/*was necessary so that I can display the information about the shows to the side as originally intended, also so that I may space articles where necessary*/
+flex:auto;/*helps to display information about the shows to the side as originally intended, also that article spacing is where necessary. Current setting also doesn't have alignment issues on different size monitors*/
+margin: auto;
 }
 
 h1.sr{
