--- a/styles/h-s.css
+++ b/styles/h-s.css
@@ -119,7 +119,10 @@ border-radius: 8px;
 box-shadow: 2px 4px #92ADC9;
 float: left;
 cursor: pointer;
+margin-left: 1rem;
 margin-right: 1rem;
+margin-top: 1rem;
+margin-bottom: 1rem;
 }
 
 img.tyg, img.tpn{
@@ -131,6 +134,9 @@ box-shadow: 2px 4px #92ADC9;
 float: right;
 cursor: pointer;
 margin-left: 1rem;
+margin-right: 1rem;
+margin-top: 1rem;
+margin-bottom: 1rem;
 }
 
 section article img:hover{
@@ -138,10 +144,9 @@ box-shadow: 2px 4px white;
 }
 
 article{
-margin-bottom: 1em;
-margin-right: 1em;
 border-radius: 8px;
-flex:400px;/*was necessary so that I can display the information about the shows to the side as originally intended, also so that I may space articles where necessary*/
+flex:auto;
+margin: auto;
 }
 
 h1.sr{
